# costco-news-monitor

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  COMMERCIAL_STRATEGY.md  EXPLICACION_CRITERIOS_BUSQUEDA.md  FASE_A.md  FILTRO_TIEMPO_IMPLEMENTADO.md  GOVERNANCE.md  GUIA_CONFIGURACION_POSTGRESQL_RAILWAY.md  GUIA_CONFIGURACION_TWILIO.md  GUIA_MEJORAS_IA.md  INICIO_RAPIDO_IA.md  PLAN_30_DIAS.md  Procfile  README.md  README_AI.md  README_COMPLETO.md  README_ORIGINAL.md  RESUMEN_MEJORAS.md  WEEK1_METRICS.md  ai_analyzer.py  ai_analyzer_v2.py  alembic.ini  analyzer.py  config.py  crime_report.py  crontab_example.txt  database.py  database_schema.sql  geolocation.py  main.py  main_ai.py  main_ai_v2.py  nixpacks.toml  notifier.py  notifier_ai.py  pyproject.toml  requirements-dev.txt  requirements.txt  (+21 more)
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_decision_log_and_feedback.py  0003_add_missing_decision_log_fields.py  0004_add_geolocation_fields.py  0005_add_token_cache_and_cost_fields.py  (+1 more)
claude_outputs/: README.md
docs/: ARQUITECTURA_Y_ESTADO.md  DB_SNAPSHOT_20260420.md  GEOLOCATOR_FIX_RESEARCH.md  RAILWAY_LESSONS.md  quick_start.md
scripts/: README.md  cleanup_nightly_logs.sh  dev_run.sh  fix_alembic_version_col.py  generate_report.py  nightly_run.sh  run_pipeline.py
tests/: conftest.py  test_ai_parsers.py  test_content_hasher.py  test_crime_digest_scheduler.py  test_daily_heartbeat.py  test_deep_analysis.py  test_fecha_evento.py  test_file_storage.py  test_geo_service.py  test_heartbeat.py  test_postgres_fase2.py  test_watchdog.py
(+165 files in other folders)
