[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costco-news-monitor-v2"
version = "2.0.0"
description = "Sistema de monitoreo de incidentes para sucursales Costco Monterrey - v2"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.25",
    "structlog>=24.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "feedparser>=6.0",
    "pytz>=2024.1",
    "selectolax>=0.3",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
    "aiosqlite>=0.20",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
